--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+amqp==5.1.1
 asgiref==3.5.2
+async-timeout==4.0.2
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
@@ -10,7 +17,9 @@ cryptography==40.0.1
 Django==4.1.4
 django-environ==0.9.0
 django-rest-knox==4.2.0
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
 gunicorn==20.1.0
 h11==0.14.0
@@ -18,17 +27,24 @@ idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+kombu==5.2.4
 MarkupSafe==2.1.1
 mysqlclient==2.1.1
 packaging==22.0
+prompt-toolkit==3.0.38
 psycopg2==2.9.5
 pycparser==2.21
+PyJWT==2.6.0
 pytz==2022.6
+redis==4.5.3
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.13
 uvicorn==0.20.0
+vine==5.0.0
+wcwidth==0.2.6
