--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-    mariadb:
-        image: mariadb:10
-        container_name: mariadb
+    postgres:
+        image: postgres:14-alpine
+        container_name: postgres
         ports:
             - '3307:3306'
         volumes:
@@ -30,7 +30,7 @@ services:
         ports:
             - '8000:8000'
         depends_on:
-            - mariadb
+            - postgres
         networks:
             - web
 
