--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,14 @@ click-repl==0.2.0
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
+cron-descriptor==1.2.35
 cryptography==40.0.1
 Django==4.1.4
+django-celery-beat==2.5.0
+django-celery-results==2.5.0
 django-environ==0.9.0
 django-rest-knox==4.2.0
+django-timezone-field==5.0
 django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -35,6 +39,8 @@ prompt-toolkit==3.0.38
 psycopg2==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
+python-crontab==2.7.1
+python-dateutil==2.8.2
 pytz==2022.6
 redis==4.5.3
 requests==2.28.1
