--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
+attrs==22.2.0
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.12.7
@@ -27,22 +28,28 @@ django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
+exceptiongroup==1.1.1
 flower==1.2.0
 gunicorn==20.1.0
 h11==0.14.0
 humanize==4.6.0
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
 MarkupSafe==2.1.1
+msgpack==1.0.5
 packaging==22.0
+pluggy==1.0.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 psycopg2==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
+pytest==7.2.2
+pytest-django==4.5.2
 python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2022.6
@@ -52,6 +59,7 @@ ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
 tornado==6.2
 typing_extensions==4.5.0
 tzdata==2022.7
