Deployment: Development, Production 환경변수 설정 분리
1. .env, .env.prod 분리
2. docker-compose.yml 수정 : backend service에서 .env.prod를 enf_file로 사용 하도록 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 
 services:
     backend:
+        env_file:
+            - ./config/settings/.env.prod
         build: .
         container_name: backend
         command: gunicorn --bind 0.0.0.0:8000 config.wsgi:application
