--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,22 @@ services:
             - web
         ports:
             - "9090:9090"
+    grafana:
+        image: grafana/grafana
+        environment:
+            GF_INSTALL_PLUGINS: "grafana-clock-panel,grafana-simple-json-datasource"
+        restart: 'no'
+        volumes:
+            - grafana_data:/var/lib/grafana
+        ports:
+            - "3000:3000"
+        depends_on:
+            - prometheus
+        networks:
+            - web
 
 networks:
     web:
 volumes:
   postgres_data:
+  grafana_data: {}
