--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,7 +4,7 @@ global:
 
 scrape_configs:
   - job_name: monitoring
-    metrics_path: /metrics
+    metrics_path: prometheus/metrics
     static_configs:
       - targets:
         - backend:8000
